Bug #23894 --> be sure to unescape the attachment's display name before brining up the file picker. r=sspitzer